04. Services and Networking/service1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: diff-pod
  labels:
    app: DiffPod
spec:
  containers:
  - image: tomcat
    name: tomcat    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: MyApp
  name: deploy01
spec:
  replicas: 3

  selector:
    matchLabels:
      app: pod-for-service

  template:
    metadata:
      labels:
        app: pod-for-service
      name: pod-4-service
    spec:
      containers:
      - image: nginx
        name: nginx-deploy
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
      app: pod-for-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-node-port
spec:
  type: NodePort
  selector:
    app: pod-for-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-alb
spec:
  type: LoadBalancer
  selector:
    app: pod-for-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
